--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "server-json": "json-server --watch database.json --port 3000"
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "json-server": "^0.17.4",
     "react": "18.1.0",
     "react-native": "0.70.10",
     "styled-components": "^6.1.0"
