--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "server-json": "json-server --watch database.json --port 3000"
+    "server-json": "json-server --watch database.json --host 192.168.8.111 --port 3000"
   },
   "dependencies": {
     "axios": "^1.6.0",
