--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-server": "^0.17.4",
     "react": "18.1.0",
     "react-native": "0.70.10",
+    "react-native-svg": "^13.14.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
